--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
       <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
     </div>
   </div>
-      <!-- Контент блока Пульпа будет сформирован из отдельных шагов -->
     </div>
 
     <div id="section-sinter" class="analyzer-section">
@@ -216,6 +215,7 @@
       <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
     </div>
 </div>
+</div> 
 
 <div id="section-multiplex" class="analyzer-section">
   <h5>Пульпа с мультиплексором</h5>
