--- a/index.html
+++ b/index.html
@@ -246,19 +246,27 @@
   </div>
   <div class="mb-3">
     <label class="form-label">Размер кусков (макс/сред), мм</label>
-    <input type="text" name="sinter_grain_size" class="form-control">
+    <input type="text" name="multiplex_grain_size" class="form-control">
   </div>
   <div class="mb-3">
     <label class="form-label">Плотность</label>
-    <input type="text" name="sinter_density" class="form-control">
+    <input type="text" name="multiplex_density" class="form-control">
   </div>
   <div class="mb-3">
     <label class="form-label">Время измерения (мин/сред/макс), сек</label>
-    <input type="text" name="sinter_measurement_time" class="form-control">
+    <input type="text" name="multiplex_measurement_time" class="form-control">
   </div>
   <div class="mb-3">
-    <label class="form-label">Наличие тяжёлых металлов в шихте</label>
-    <input type="text" name="sinter_heavy_metals" class="form-control">
+    <label class="form-label">Наличие тяжёлых металлов</label>
+    <input type="text" name="multiplex_heavy_metals" class="form-control">
+  </div>
+  <div class="mb-3">
+    <label class="form-label">Состав жидкой фазе</label>
+    <input type="text" name="multiplex_liquid_phase" class="form-control">
+  </div>
+    <div class="mb-3">
+    <label class="form-label">Перечень используемых реагентов</label>
+    <input type="text" name="multiplex_reagents" class="form-control">
   </div>
 </div>
     
