--- a/index.html
+++ b/index.html
@@ -296,6 +296,26 @@
     </div>
   </div>
 </div>
+
+  <div id="section-courier" class="analyzer-section">
+      <h5>Пульпа с мультиплексором (на замену Курьер)</h5>
+      <div class="mb-3">
+        <label class="form-label">Наличие существующей системы отбора/доставки проб (Courier, MOG или иная)</label>
+        <input type="text" name="courier_existing_system" class="form-control">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Планируется ли подключение к существующему мультиплексору</label>
+        <input type="text" name="courier_connection_plan" class="form-control">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Количество точек для анализа</label>
+        <input type="number" name="courier_streams" class="form-control">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Температура окружающей среды (мин/макс)</label>
+        <input type="text" name="courier_temperature" class="form-control">
+      </div>
+    </div>
     
     <!-- Контейнер для скриптов -->
     <script>
