--- a/index.html
+++ b/index.html
@@ -315,6 +315,36 @@
         <label class="form-label">Температура окружающей среды (мин/макс)</label>
         <input type="text" name="courier_temperature" class="form-control">
       </div>
+    <div class="mb-3">
+    <h5>Анализируемые элементы от Ca до U + диапазон концентраций</h5>
+    <div id="elements-ca-u"></div>
+    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('elements-ca-u')">+ Добавить элемент</button>
+  </div>
+  <div class="mb-3">
+    <h5>Анализ легких химических элементов</h5>
+    <div id="light-elements"></div>
+    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('light-elements')">+ Добавить элемент</button>
+  </div>
+  <div class="mb-3">
+    <label class="form-label">Плотность</label>
+    <input type="text" name="pulp_density" class="form-control">
+  </div>
+  <div class="mb-3">
+    <label class="form-label">Время измерения (мин/сред/макс), сек</label>
+    <input type="text" name="pulp_measurement_time" class="form-control">
+  </div>
+  <div class="mb-3">
+    <label class="form-label">Наличие тяжёлых металлов в пульпе</label>
+    <input type="text" name="pulp_heavy_metals" class="form-control">
+  </div>
+  <div class="mb-3">
+    <label class="form-label">Состав жидкой фазы</label>
+    <input type="text" name="pulp_liquid_phase" class="form-control">
+  </div>
+  <div class="mb-3">
+    <label class="form-label">Перечень используемых реагентов</label>
+    <input type="text" name="pulp_reagents" class="form-control">
+  </div>
     </div>
     
     <!-- Контейнер для скриптов -->
