--- a/index.html
+++ b/index.html
@@ -138,10 +138,12 @@
       <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
-    <div class="mb-3">
-      <label class="form-label" for="installation_location">Местонахождение установки</label>
-      <input type="text" class="form-control" id="installation_location" name="installation_location">
-    </div>
+       <div class="mb-3">
+        <label for="location" class="form-label">Местонахождение установки</label>
+        <input type="text" id="location" name="location" class="form-control mb-2">
+        <label for="location_photo" class="form-label">Загрузите фото местонахождения</label>
+        <input type="file" id="location_photo" name="location_photo" class="form-control">
+      </div>
     <div class="mb-3">
       <label class="form-label" for="water_composition">Состав оборотной воды</label>
       <input type="text" class="form-control" id="water_composition" name="water_composition">
