--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   </div>
   <div class="mb-3">
     <h5>Анализируемые элементы от Ca до U + диапазон концентраций</h5>
-    <div id="sinter-elements-ca-u"></div>
+    <div id="multiplex-elements-ca-u"></div>
     <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('sinter-elements-ca-u')">+ Добавить элемент</button>
   </div>
   <div class="mb-3">
@@ -319,7 +319,7 @@
       </div>
     <div class="mb-3">
     <h5>Анализируемые элементы от Ca до U + диапазон концентраций</h5>
-    <div id="elements-ca-u"></div>
+    <div id="courier-elements-ca-u"></div>
     <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('elements-ca-u')">+ Добавить элемент</button>
   </div>
   <div class="mb-3">
