--- a/index.html
+++ b/index.html
@@ -320,12 +320,12 @@
     <div class="mb-3">
     <h5>Анализируемые элементы от Ca до U + диапазон концентраций</h5>
     <div id="courier-elements-ca-u"></div>
-    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('elements-ca-u')">+ Добавить элемент</button>
+    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('courier-elements-ca-u')">+ Добавить элемент</button>
   </div>
   <div class="mb-3">
     <h5>Анализ легких химических элементов</h5>
-    <div id="light-elements"></div>
-    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('light-elements')">+ Добавить элемент</button>
+    <div id="courier-light-elements"></div>
+    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('courier-light-elements')">+ Добавить элемент</button>
   </div>
   <div class="mb-3">
     <label class="form-label">Плотность</label>
