--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Опросный лист по техпроцессу</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <style>
     .element-row { display: flex; gap: 10px; margin-bottom: 10px; }
     .element-row input { flex: 1; }
@@ -399,10 +401,59 @@
         const target = document.getElementById(`section-${this.value}`);
         if (target) target.style.display = 'block';
       });
-    </script>
-
+    <div class="mb-3">
+      <button type="button" class="btn btn-primary" onclick="submitForm()">Отправить</button>
+    </div>
   </form>
 </div>
+
+<script>
+  (function() {
+    emailjs.init("lK76KGFPVwTGiY9vX");
+  })();
+
+  function addElementRow(containerId) {
+    const container = document.getElementById(containerId);
+    const row = document.createElement('div');
+    row.className = 'element-row';
+    row.innerHTML = `
+      <input type="text" name="${containerId}_element[]" placeholder="Элемент" class="form-control">
+      <input type="text" name="${containerId}_range[]" placeholder="Диапазон (%)" class="form-control">
+      <button type="button" class="btn btn-danger" onclick="this.parentElement.remove()">✖ Удалить</button>
+    `;
+    container.appendChild(row);
+  }
+
+  document.getElementById('material').addEventListener('change', function () {
+    document.querySelectorAll('.analyzer-section').forEach(s => s.style.display = 'none');
+    const target = document.getElementById(`section-${this.value}`);
+    if (target) target.style.display = 'block';
+  });
+
+  function submitForm() {
+    const form = document.getElementById("form");
+    const email = form.email.value;
+
+    html2pdf().from(form).outputPdf('blob').then(function (pdfBlob) {
+      const reader = new FileReader();
+      reader.onload = function () {
+        const base64 = reader.result.split(',')[1];
+
+        emailjs.send("service_1rnpxea", "template_sk137ts", {
+          to: email,
+          subject: "Форма опроса по техпроцессу",
+          body: "См. прикреплённый PDF-файл",
+          attachment: base64
+        }).then(function(response) {
+          alert("Форма отправлена успешно!");
+        }, function(error) {
+          alert("Ошибка отправки: " + error.text);
+        });
+      };
+      reader.readAsDataURL(pdfBlob);
+    });
+  }
+</script>
 
 </body>
 </html>
