--- a/index.html
+++ b/index.html
@@ -407,6 +407,12 @@
   </form>
 </div>
 
+    <div class="mb-3">
+      <button type="button" class="btn btn-primary" onclick="submitForm()">Отправить</button>
+    </div>
+  </form>
+</div>
+
 <script>
   (function() {
     emailjs.init("lK76KGFPVwTGiY9vX");
